Revision history for {{$dist->name}}

{{$NEXT}}
 [Features]
 - Can now pass 'auto_prereqs_skip' instead of having to filter the bundle and mangle things.

1.0.4 2011-04-03T12:08:53Z
 [Dependencies]
 - Moved dependency on CompileTests plugin from 1.101800 to 1.110930 to
   avoid rt#67183

 [Features]
 - Removed extra whitespace padding on injected release stamp lines. This
   results in the generated file being the same as a parsed and
   re-serialized version of the same file as per how CPAN::Changes sees it.

 [Packaging]
 - Rebuilt with rt#67183 test annoyance solved.

1.0.3 2011-04-03T01:00:33Z
 [Dependencies]
 - Added Dist::Zilla::Plugin::CPANChangesTests

 [Features]
 - Now generate versions in W3CDTF form for compatibility with CPAN
   Changes.
 - Add CPANChangesTests to all generated dists.

 [Packaging]
 - Reworked Changes file to be closer to CPAN::Changes spec, as well as to
   be more informative.

1.0.2 2011-02-07T14:53:13Z
 [Documentation]
 - Added a rant section on the Author:: scheme.
 - Cite other authors using the Author:: scheme.

 [Packaging]
 - Moved to being @Author::KENTNL

1.0.1 2011-01-12T19:03:19Z
 [Dependencies]
 - Now suggests @KENTNL 1.0.0 for Devel Suggests.

 [Packaging]
 - Fix the default version to be unpadded. Its useless with padding anyway.

1.000.000 2011-01-09T10:15:06Z
 [Features]
 - Initial version on new dists is now 0.1.0 instead of 0.01000

 [Packaging]
 - Migrate to Gentoo style version numbers.

0.01023312 2011-01-01T20:01:33Z
 [Dependencies]
 - Use Dist::Zilla::Plugin::AutoPrereqs instead of ::AutoPrereq
 - Add Git::NextVersion 1.102810
 - Drop portability tests.
 - Add ::Prereqs

0.01023311 2011-01-01T19:31:37Z
 [BugFixes]
 - Ini generation previously produced "Prereq" instead of the now-standard
   "Prereqs". This is now fixed.

 [Dependencies]
 - Dropped Dist::Zilla::Plugin::PortabilityTests.
 - Added Class::Load

 [Features]
 - Ships now with minting profile 'Author::KENTNL'. New dists can be minted